fixed CR issues

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <section class="section reasons">
         <h2 class="section__title">Почему сосредоточиться так сложно</h2>
         <div class="section__text-container">
-          <div class="section__paragraph">
+          <article class="section__paragraph">
             <h3 class="section__paragraph-subtitle title-decor">
               Многозадачность
             </h3>
@@ -73,14 +73,14 @@
               важные. Где же легендарная многозадачность, когда она так нужна
               вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
               её просто не существует. Исследователи
-              <a href="#" class="text-link">выяснили</a>, что мозгу тяжело
-              концентрироваться даже на двух делах одновременно. А когда в поле
-              внимания попадает несколько важных задач, организм паникует и
-              выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
-              работаем невнимательно: ошибаемся и быстро устаём.
+              <a href="#" class="text-link" target="_blank">выяснили</a>, что
+              мозгу тяжело концентрироваться даже на двух делах одновременно. А
+              когда в поле внимания попадает несколько важных задач, организм
+              паникует и выделяет кортизол и адреналин — «гормоны стресса».
+              Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
             </p>
-          </div>
-          <div class="section__paragraph">
+          </article>
+          <article class="section__paragraph">
             <h3 class="section__paragraph-subtitle title-decor">Дофамин</h3>
             <p class="section__paragraph-text">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В
@@ -92,13 +92,13 @@
               чувствуем удовольствие. Получается замкнутый круг: чем больше
               отвлекаешься, тем больше удовольствия получаешь.
             </p>
-          </div>
+          </article>
         </div>
       </section>
       <section class="section distractions">
         <h2 class="section__title">Что снижает концентрацию внимания?</h2>
         <div class="section__text-container">
-          <div class="section__paragraph">
+          <article class="section__paragraph">
             <h3 class="section__paragraph-subtitle title-decor">
               Многозадачность
             </h3>
@@ -110,8 +110,8 @@
               собранными всё время — невозможно. Концентрация — мышца, и она
               может не выдержать, если не давать ей отдохнуть.
             </p>
-          </div>
-          <div class="section__paragraph">
+          </article>
+          <article class="section__paragraph">
             <h3 class="section__paragraph-subtitle title-decor">Еда</h3>
             <p class="section__paragraph-text">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
@@ -121,8 +121,8 @@
               углеводов» заканчивается, мы чувствуем усталость и сонливость. И
               хотим ещё больше быстрых углеводов.
             </p>
-          </div>
-          <div class="section__paragraph">
+          </article>
+          <article class="section__paragraph">
             <h3 class="section__paragraph-subtitle title-decor">Гаджеты</h3>
             <p class="section__paragraph-text">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
@@ -133,7 +133,7 @@
               Вот и получается, что чем больше времени мы проводим в гаджетах,
               тем больше времени затем нужно, чтобы вернуться к работе.
             </p>
-          </div>
+          </article>
         </div>
       </section>
       <section class="section solutions">
@@ -145,8 +145,8 @@
           <h3 class="section__text-caption title-decor">
             5 простых (на самом деле не очень) советов
           </h3>
-          <ul class="section__list">
-            <li class="section__list-item">
+          <ul class="section__text-container">
+            <li class="section__paragraph">
               <h4 class="section__paragraph-subtitle title-decor">
                 Представьте небо и облака
               </h4>
@@ -161,7 +161,7 @@
                 не волноваться о потенциальных проблемах из будущего.
               </p>
             </li>
-            <li class="section__list-item">
+            <li class="section__paragraph">
               <h4 class="section__paragraph-subtitle title-decor">
                 Включите музыку
               </h4>
@@ -172,21 +172,21 @@
                 попробовать включить плейлист в «белым шумом» или нейромузыкой.
               </p>
             </li>
-            <li class="section__list-item">
+            <li class="section__paragraph">
               <h4 class="section__paragraph-subtitle title-decor">
                 Прогуляйтесь
               </h4>
               <p class="section__paragraph-text">
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-                <a href="#" class="text-link">показал</a>, что созерцание
-                природы повышает концентрацию, в то время как после просмотра
-                городских пейзажей она наоборот понижается. Можно совместить
-                прогулку с физическими упражнениями или бегом — так в мозг
-                поступит ещё больше кислорода и он будет лучше работать. Но и
-                простая двадцатиминутная прогулка — тоже отличный вариант.
+                <a href="#" class="text-link" target="_blank">показал</a>, что
+                созерцание природы повышает концентрацию, в то время как после
+                просмотра городских пейзажей она наоборот понижается. Можно
+                совместить прогулку с физическими упражнениями или бегом — так в
+                мозг поступит ещё больше кислорода и он будет лучше работать. Но
+                и простая двадцатиминутная прогулка — тоже отличный вариант.
               </p>
             </li>
-            <li class="section__list-item">
+            <li class="section__paragraph">
               <h4 class="section__paragraph-subtitle title-decor">
                 Хорошо ешьте
               </h4>
@@ -198,7 +198,7 @@
                 пшеницы.
               </p>
             </li>
-            <li class="section__list-item">
+            <li class="section__paragraph">
               <h4 class="section__paragraph-subtitle title-decor">Читайте</h4>
               <p class="section__paragraph-text">
                 Настоящие бумажные книги. Это правда помогает с концентрацией:
@@ -210,7 +210,7 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="section pictures">
         <h2 class="section__heading title-decor">А можно в картинках?</h2>
         <div class="section__gallery">
           <div class="section__gallery-item">
